examples/bad/tuple_errors.soy
a = t(1, int); # ERROR: you have to provide new tuple: t(1, 2) or tuple type (int, int), NOT MIX

a = (1, 2); # ERROR: to construct a new tuple, use t(...) not (...)